# operation_pretzel

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Makefile  README.MD  analysis_utils.c  analysis_utils.h  config.c  config.c~  config.h  config.h~  config_loader.c  config_loader.h  correlate_trts_runs.py  engine.c  engine.c~  engine.h  events.csv  fingerprint_gen.py  interpret_trts_runs.py  koppa.c  koppa.h  main.c  phase_mapper.c  psi.c  psi.c~  psi.h  rational.c  rational.c~  rational.h  rational.h~  rational_strict.h  rigbyspace  rigbyspace_manpage.txt  run_trts_configs.py  self_refine.c  simulate.c  simulate.c~  simulate.h  state.c  (+6 more)
gui/: CMakeLists.txt  CMakeLists.txt~  README.md  example.trtscfg
gui/include/: AnalyzerPanel.hpp  EngineConfigPanel.hpp  EngineConfigPanel.hpp~  ExecutionPanel.hpp  ExecutionPanel.hpp~  FingerprintPanel.hpp  MainWindow.hpp  MainWindow.hpp~  OutputTableWidget.hpp  PhaseMapExplorer.hpp  RhythmVisualizerWidget.hpp  RhythmVisualizerWidget.hpp~  StackViewerWidget.hpp  StackViewerWidget.hpp~  TRTSConfig.hpp  TRTSConfig.hpp~  TRTSCoreProcess.hpp  TheoristExplorerPanel.hpp
gui/src/: AnalyzerPanel.cpp  EngineConfigPanel.cpp  EngineConfigPanel.hpp  ExecutionPanel.cpp  ExecutionPanel.hpp  FingerprintPanel.cpp  MainWindow.cpp  MainWindow.cpp~  MainWindow.hpp  OutputTableWidget.cpp  OutputTableWidget.cpp~  PhaseMapExplorer.cpp  RhythmVisualizerWidget.cpp  StackViewerWidget.cpp  TRTSConfig.cpp  TRTSConfig.hpp  TRTSCoreProcess.cpp  TheoristExplorerPanel.cpp  main.cpp  simulate.c
hypotheses/: confidence_scores.csv  pattern_map.json  suggestions.csv  theories.md
